handle errors and use axios

--- a/src/App.css
+++ b/src/App.css
@@ -9,4 +9,6 @@
 .table-row > span { overflow: hidden; text-overflow: ellipsis; padding: 0 5px; }
 .button-inline { border-width: 0; background: transparent; color: inherit; text-align: inherit; -webkit-font-smoothing: inherit; padding: 0; font-size: inherit; cursor: pointer; }
 .button-active { border-radius: 0; border-bottom: 1px solid #38BB6C; }
-.loading{font-size: 100px;}
+.loading{font-size: 50px; text-align: center;}
+.errorhandle{text-align: center; width: fit-content; margin: 30px auto;}
+.errorhandle h1 {background-color: red; padding: 10px; color: #ffffff; border-radius: 10px;}
